# fastapi-online-cinema

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3466db34ff1c_create_profile_model.py  d4278751ac21_initial_migration.py
db/: database.py  dependencies.py
src/: main.py
src/db/: database.py  dependencies.py
src/users/: crud.py  models.py  routers.py  schemas.py  security.py
