[project]
name = "fastapi-online-cinema"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreiVed",email = "catblues87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "sqlalchemy-stubs (>=0.4,<0.5)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
